Fix #52, color transparent images to white for better readability

--- a/background.css
+++ b/background.css
@@ -20,13 +20,13 @@ Read more here: https://www.w3schools.com/css/css_attribute_selectors.asp
 /*---DARK BACKGROUND---*/
 
 /* Set dark background except selectors listed below */
-*:not(tr, td, div[style*="background-color"], div > div > span, td > div > span, div, a[class*="mw-tmh-play"], button[class*="mw-mmv-"],
+*:not(:is(tr, td, div[style*="background-color"], div > div > span, td > div > span, div, a[class*="mw-tmh-play"], button[class*="mw-mmv-"],
 /* Text in tables: */ td > span, td > b, td > a, td > sub,
 /* Screenshot & Foxy Gesture bug fix #41: */ iframe, canvas,
 /* Color scheme under images, e.g: https://en.wikipedia.org/wiki/2023_Israel%E2%80%93Hamas_war#Invasion_of_the_Gaza_Strip_(27_October%E2%80%93present) */ span[class*="legend-color"],
 /* Images */ img[class*="mw-file-element"],
 /* Logo*/ img[class="mw-logo-wordmark"], img[class="mw-logo-tagline"]
- ),
+ )),
 
 /* AVOID: div[class*="mw"] and div since it causes black bug (GitHub issue #10) */
 div[class*="mw-page-container"], div[class*="vector-header-container"], div[id*="vector-main-menu"], div[id*="vector-toc"], div[id*="mp"], div[class*="side"], div[class*="thumb"],
@@ -51,10 +51,14 @@ div:root
 }
 
 /* Lighter dark background */
-tr::before, img[src$=".svg.png"] {
+tr::before{
   background-color: #21262d !important;
 }
 
+/* White background on transparent images */
+/* Issue #52 */ img[src$=".svg.png"] {
+  background-color: #c9d1d9 !important;
+}
 
 
 /*---TEXTS---*/
